# one_off_code

./: .bashrc  .emacs  .gitattributes  .gitignore  README.md  python_startup.py
Lego-Project-3D-Shape-Manipulation/: README.md  main.sh
airline_data/: main.py  misc_utilities.py  process_data.py  visualize_map.py
amazon_movie_ratings/: environment.yml  misc_utilities.py  process_data.py
anime_blog/: environment.yml  scratch.ipynb
anime_reviews/: data_modules.py  environment.yml  global_values.py  hyperparameter_search.py  main.py  misc_utilities.py  models.py  process_data.py  trainer.py
arxiv_scraper/: dependency-notes.txt  scraper.py
autograd/: environment.yml  main.py  setup.py
bupkis/: main.py
caribou/: environment.yml  index.css  index.html  misc_utilities.py  play_button_callback.js  process_data.py  slider_callback.js
char_rnn/: install_notes.txt  main.py
chords/: package-lock.json  package.json
computer_vision_spring_2015/: README.md
crashes/: .gitattributes  environment.yml  misc_utilities.py  process_data.py
cugraph_experiments/: environment.yml  experiment.py  test_centrality.py  test_community.py  test_connected_components.py
d3/: scratch.html  vanilla_lstm_visualization.js
ecommerce/: choropleth.py  environment.yml  index.css  index.html  index.js  misc_utilities.py  process_data.py
engineering_logic_spring_2015/: README.md  coq_class.v  coq_hw.v  monad.v  monad2.v  state_monad.hs
eventus/: book_analyzer.py  old_book_analyzer.py  test.py
facebook/: environment.yml  link_predictor.py  main.py  misc_utilities.py
gabe_robins_puzzle_solver/: README.md  gui.py  solver.py
google_reviews/: environment.yml  main.py  misc_utilities.py
google_stock_scraper/: environment.yml  main.py  misc_utilities.py  multiprocess.py  rh_scrape.py  scrape.py
graph2vec/: environment.yml  global_values.py  main.py  mutag_classifier.py
guessthecorrelation/: README.md  automated.py  continuous.py  main.py
hierarchy_visualization/: ai_data.json  cooking_appliance_data.json  coronary_artery_disease.json  crime_data.json  engineer_data.json  environment.yml  financial_services_data.json  gather_data.py  hierarchy.js  hierarchy_data.json  index.css  index.html  military_aircraft_data.json  ranged_weapon_data.json  violation_of_law_data.json
imdb_sentiment_analysis/: main.py
joel/: gather_data.py  misc_utilities.py  models.py  output.csv  preprocess_data.py
mesh_gen/: BasicShapes.py  Mesh.py
mlir/: environment.yml  iree.py  main.py  notes.txt  test.mlir
mlir/paul/paullang-main/: CMakeLists.txt  paullang-main.cpp
mlir/tibs/paullang-main/: CMakeLists.txt  paullang-main.cpp
mlir/tibs/paullang-opt/: CMakeLists.txt  paullang-opt.cpp
mlir/tibs/paullang-translate/: CMakeLists.txt  paullang-translate.cpp
mlir/tibs/tibs-opt/: CMakeLists.txt  tibs-opt.cpp
netflix/: main.py  misc_utilities.py  preprocess.py  projected_actors.csv  projected_actors_k_core_100.csv  projected_actors_k_core_100_louvain.csv  projected_actors_k_core_10_label_propagation.csv  projected_actors_k_core_10_louvain.csv  projected_actors_k_core_20.csv  projected_actors_k_core_20_label_propagation.csv  projected_actors_k_core_20_louvain.csv  projected_actors_k_core_30.csv  projected_actors_k_core_30_label_propagation.csv  projected_actors_k_core_30_louvain.csv  projected_actors_k_core_45.csv  projected_actors_k_core_45_label_propagation.csv  projected_actors_k_core_60.csv  projected_actors_k_core_60_label_propagation.csv  projected_actors_k_core_75.csv  projected_directors.csv  projected_directors_k_core_10.csv  projected_directors_k_core_100.csv  projected_directors_k_core_10_label_propagation.csv  projected_directors_k_core_10_louvain.csv  projected_directors_k_core_20.csv  projected_directors_k_core_20_label_propagation.csv  projected_directors_k_core_20_louvain.csv  projected_directors_k_core_30.csv  projected_directors_k_core_30_label_propagation.csv  projected_directors_k_core_30_louvain.csv  projected_directors_k_core_45_label_propagation.csv  projected_directors_k_core_45_louvain.csv  projected_directors_k_core_60_label_propagation.csv  projected_directors_k_core_60_louvain.csv  projected_directors_k_core_75_label_propagation.csv  projected_directors_k_core_75_louvain.csv  visualize.py  zz.csv
numba_experiment/: environment.yml  test.py
nyc_get_food/: environment.yml  main.py  misc_utilities.py
old_sample_code/: README.md
prefect_oa/: README.md
pybind_experiment/: notes.txt
pybind_experiment/pcap_reader/cpp/: CMakeLists.txt
pybind_experiment/pcap_reader/cpp/include/: pcap_reader.hpp
pybind_experiment/pcap_reader/cpp/src/: pcap_reader.cpp
python_bytecode_viz/: environment.yml  main.py  test.py
qwop/: qwop.py
reuters/: data_loader.py  main.py  misc_utilites.py  models.py  notes.txt  preprocess_data.py
scalping/: environment.yml  main.py  recommendations.py
sentiment_analysis/: main.py  multi_class_main.py  old_main.py
sentiment_analysis_twitter/: models.py  todo.txt
static_autodiff/: conftest.py  environment.yml  parser.py  setup.cfg  setup.py
stock_scraper/: bloomberg.py  environment.yml  misc_utilities.py  multiprocess.py  rh_price_scraper.py  rh_scrape.py  scrape.py  scrape_utilities.py  toy.py  vanguard.py
tempus/: environment.yml  misc_utilities.py
test/: environment.yml  graph.json  test.py  text_classifier.py
tigen/: Makefile  tigen.ml
torch_examples/: pos_tagger.py  (+3 more)
(+3505 files in other folders)
